# tailcode

./: .gitignore  README.md  pyproject.toml
config/: .gitignore  config.example.yaml
docs/: ARCHITECTURE.md  apple-shortcuts.md  ipad-shortcuts.md  iphone-ashell.md  iphone-ish.md  iphone-termius.md  mobile-workflow.md  server-setup.md  setup.md
scripts/: mac-setup.sh
scripts/notify/: boot-notify.sh  notify.sh
scripts/ssh/: ai-session.sh
scripts/tailscale/: setup.sh
scripts/wol/: enable-wol.sh  wake.sh
shortcuts/: README.md  shortcut-templates.json
src/tailcode/: __init__.py  cli.py  config.py  discover.py  install.py  notify.py  ssh.py  tailscale.py  webhook.py  wol.py
