[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tailcode"
version = "0.1.0"
description = "Tailscale-based remote development toolkit - SSH, WoL, notifications, and device management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Filip Dam" }
]
keywords = ["tailscale", "ssh", "wake-on-lan", "devops", "remote-development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
tailcode = "tailcode.cli:app"
tc = "tailcode.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/tailcode"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
